--- a/src/main/resources/templates/marcas/create.html
+++ b/src/main/resources/templates/marcas/create.html
@@ -13,6 +13,7 @@
     <h1>Registrar marca</h1>
     <form th:action="@{/marcas}" th:object="${marca}" method="post">
     	<p>Nombre: <input type="text" th:field="*{nombre}"/></p>
+        <p>Descripcion: <input type="text" th:field="*{descripcion}"/></p>
         <button>Registrar</button>
     </form>
 </body>
