--- a/src/main/resources/templates/marcas/listar.html
+++ b/src/main/resources/templates/marcas/listar.html
@@ -30,6 +30,9 @@
                 <td>
                     <a th:href="@{/marcas/{id}(id=${marca.id})}">Ver</a>
                 </td>
+                <td>
+                    <a th:href="@{/marcas/{id}/edit(id=${marca.id})}">Editar</a>
+                </td>
             </tr>
         </tbody>
     </table>
