feat: controller advice para year

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -7,5 +7,7 @@
 
     <h1>Nosotros</h1>
     <p>Somos una empresa...</p>
+    
+    <div th:insert="~{fragments :: footer}"></div>
 </body>
 </html>
