--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -19,4 +19,10 @@
             <button>Logout</button>
         </form>
     </div>
+
+    <div th:fragment="footer">
+        <footer>
+            Copyright © <span th:text="${year}"></span>
+        </footer>
+    </div>
 </body>
