--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -15,6 +15,7 @@
         <a th:href="@{/marcas}">Marcas</a>
         <a th:href="@{/productos}">Productos</a>
         <a th:href="@{/login}">Login</a>
+        <a th:href="@{/registrar}">Registrate!</a>
         <form th:action="@{/logout}" method="post">
             <button>Logout</button>
         </form>
