--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -5,7 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title th:replace="${titulo}"></title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel="stylesheet" href="styles.css">
+    <!-- <link rel="stylesheet" href="styles.css"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 <body>
@@ -14,11 +14,15 @@
         <a th:href="@{/nosotros}">Nosotros</a>
         <a th:href="@{/marcas}">Marcas</a>
         <a th:href="@{/productos}">Productos</a>
-        <a th:href="@{/login}">Login</a>
-        <a th:href="@{/registrar}">Registrate!</a>
-        <form th:action="@{/logout}" method="post">
-            <button>Logout</button>
-        </form>
+        <div sec:authorize="!isAuthenticated()">
+            <a th:href="@{/login}">Login</a>
+            <a th:href="@{/registrar}">Registrate!</a>
+        </div>
+        <div sec:authorize="isAuthenticated()">
+            <form th:action="@{/logout}" method="post">
+                <button>Logout</button>
+            </form>
+        </div>
     </div>
 
     <div th:fragment="footer">
