--- a/src/main/resources/templates/productos/list.html
+++ b/src/main/resources/templates/productos/list.html
@@ -7,6 +7,8 @@
     
     <h1>Productos</h1>
     <a th:href="@{/productos/create}">Registra nuevo producto</a>
+    
+    <a th:href="@{/productos/report}">Descargar reporte</a>
     <table>
         <thead>
             <tr>
