--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" th:insert="~{layout :: base(~{::title}, ~{::body})}">
 <head>
-    <title>Farmacia Quekiwi</title>
+    <title>Lista de empleados</title>
 </head>
 <body>
-    <h1>Farmacia Quekiwi</h1>
-    <p>Bienvenido a la farmacia estamos para cuidarte</p>
-    <p>Atendemos las 24 horas</p>
+    <h1>Lista de empleados</h1>
+    <p>Bienvenido </p>
 </body>
 </html>
