--- a/src/main/resources/templates/marcas/create.html
+++ b/src/main/resources/templates/marcas/create.html
@@ -5,6 +5,33 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Empleados</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <style>
+        /* Estilos para los inputs */
+        input[type="text"], input[type="number"] {
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            width: 100%;
+        }
+        
+        /* Estilos para el botón */
+        button {
+            background-color: #007bff;
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        
+        /* Estilos para los enlaces */
+        a {
+            margin-right: 10px;
+            text-decoration: none;
+            color: #007bff;
+        }
+    </style>
 </head>
 <body>
     <a th:href="@{/nosotros}">Nosotros</a>
