--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -10,28 +10,45 @@
 </head>
 <body>
     <div th:fragment="header">
-        <a th:href="@{/}">Quekiwi</a>
-        <a th:href="@{/nosotros}">Nosotros</a>
-        <a th:href="@{/marcas}">Empleados</a>
-        <div sec:authorize="!isAuthenticated()">
-            <a th:href="@{/login}">Login</a>
-            <a th:href="@{/registrar}">Registrate!</a>
-        </div>
-        <div sec:authorize="isAuthenticated()">
-            <form th:action="@{/logout}" method="post">
-                <button>Logout</button>
-            </form>
-        </div>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-info">
+            <a class="navbar-brand" th:href="@{/}">Detalles</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link text-white" th:href="@{/nosotros}">Listas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" th:href="@{/marcas}">Empleados</a>
+                    </li>
+                    <li sec:authorize="!isAuthenticated()" class="nav-item">
+                        <a class="nav-link text-white" th:href="@{/login}">Login</a>
+                    </li>
+                    <li sec:authorize="!isAuthenticated()" class="nav-item">
+                        <a class="nav-link text-white" th:href="@{/registrar}">Registrate!</a>
+                    </li>
+                    <li sec:authorize="isAuthenticated()" class="nav-item">
+                        <form th:action="@{/logout}" method="post" class="nav-link">
+                            <button class="btn btn-link text-white">Logout</button>
+                        </form>
+                    </li>
+                </ul>
+                
+            </div>
+        </nav>
     </div>
+
 
     <div th:fragment="footer">
         <footer>
-            Copyright © <span th:text="${year}"></span>
+            Siguenos en nuestras redes...
         </footer>
     </div>
 
 
     <div th:fragment="publicidad">
-        <p>Accede a descuentos de OpenEnglish.com!</p>
+        <p>Accede a la lista de Empleados</p>
     </div>
 </body>
