--- a/src/main/resources/templates/marcas/edit.html
+++ b/src/main/resources/templates/marcas/edit.html
@@ -5,20 +5,36 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Empleados sac</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+
+    <!-- Agregar los enlaces a los archivos de Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <a th:href="@{/nosotros}">Nosotros</a>
     <a th:href="@{/marcas}">Empleados</a>
 
     <form th:action="@{/marcas/{id}/delete(id=${marca.id})}" method="post">
-        <button>Eliminar</button>
+        <button class="btn btn-danger">Eliminar</button>
     </form>
 
     <h1>Editar empleado</h1>
-    <form th:action="@{/marcas/{id}(id=${marca.id})}" method="post" th:object="${marca}">
-    	<p>Nombre: <input type="text" th:field="*{nombre}"/></p>
-        <p>Descripcion: <input type="text" th:field="*{descripcion}"/></p>
-        <button>Guardar</button>
+    <form th:action="@{/marcas/{id}(id=${marca.id})}" method="post" th:object="${marca}" class="needs-validation" novalidate>
+        <div class="mb-3">
+            <label for="nombre" class="form-label">Nombre:</label>
+            <input type="text" th:field="*{nombre}" class="form-control" id="nombre" required>
+        </div>
+        <div class="mb-3">
+            <label for="apellido" class="form-label">Apellido:</label>
+            <input type="text" th:field="*{apellido}" class="form-control" id="apellido" required>
+        </div>
+        <div class="mb-3">
+            <label for="puesto" class="form-label">Puesto:</label>
+            <input type="text" th:field="*{puesto}" class="form-control" id="puesto" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Guardar</button>
     </form>
+
+    <!-- Agregar el enlace al archivo de Bootstrap JS (opcional) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
