--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -3,20 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Login</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
 </head>
 <body>
-    <h1>Iniciar sesion</h1>
-    <form th:action="@{/login}" method="post">
-        <div>
-            <label for="nombre">Nombre</label>
-            <input id="nombre" type="text" name="username">
-        </div>
-        <div>
-            <label for="password">Contraseña</label>
-            <input id="password" type="password" name="password">
-        </div>
-        <button>Iniciar sesion</button>
-    </form>
+    <h1 class="text-center">Iniciar sesión</h1>
+    <div class="container">
+        <form th:action="@{/login}" method="post" class="mt-5">
+            <div class="form-group row">
+                <label for="nombre" class="col-md-2 col-form-label"><i class="fas fa-user"></i> Nombre</label>
+                <div class="col-md-4">
+                    <input id="nombre" type="text" name="username" class="form-control" placeholder="Usuario">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="password" class="col-md-2 col-form-label"><i class="fas fa-lock"></i> Contraseña</label>
+                <div class="col-md-4">
+                    <input id="password" type="password" name="password" class="form-control" placeholder="Contraseña">
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-md-4 offset-md-2 mb-3">
+                    <button type="submit" class="btn btn-info">Iniciar sesión</button>
+                </div>
+            </div>
+        </form>
+    </div>
+    
 </body>
 </html>
